Fixed the marquee letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1169,6 +1169,11 @@ body {
   .experience-heading {
     font-size: 10vw;
     line-height: 10vw;
+    letter-spacing: 2px;
+  }
+
+  .experience-heading.stroke-text {
+    letter-spacing: 4px;
   }
 
   .tech-stack {
